--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -7,8 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "ProjectDB": "Server=DEV_DM;Initial Catalog={project_study};User ID=sa;Password=Oucru@@Dev; MultipleActiveResultSets=true",
-    "CliresSystemDB": "Server=DEV_DM;Initial Catalog=CLIRES_SYSTEM;User ID=sa;Password=Oucru@@Dev;MultipleActiveResultSets=true "
+    "ProjectDB": "Server=(local);Initial Catalog={project_study};User ID=xx;Password=xxxxx; MultipleActiveResultSets=true",
+    "CliresSystemDB": "Server=(local);Initial Catalog=CLIRES_SYSTEM;User ID=xx;Password=xxxxx;MultipleActiveResultSets=true "
   },
   "AllowedHosts": "*",
   "Jwt": {
@@ -16,7 +16,7 @@
     "Issuer": "CliresAuthenticationServer",
     "Audience": "CliresServicePostmanClient",
     "Subject": "CliresServiceAccessToken",
-    "ExpireDay":  "1"
+    "ExpireMinutes":  "15"
   }
 }
 
